--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
 <section class="todoapp">
   <header class="header">
     <h1>todos</h1>
+    <form id='new-form'>
+      <input type='text' class='new-todo'>
+    </form>
   </header>
 
   <section class="main">
@@ -14,6 +17,14 @@
 
 <script>
   $(function() {
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      console.log('intercepted.');
+
+      var textbox = $('.new-todo');
+      console.log("Task: ", textbox.val());
+    });
+
     function taskHtml(task) {
       var checkedStatus = task.done ? "checked" : "";
         var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
@@ -28,7 +39,7 @@
     function toggleTask(e) {
       var itemId = $(e.target).data("id");
         var doneValue = Boolean($(e.target).is(":checked"));
-        
+
         $.post("/tasks/" + itemId, {
           _method: "PUT",
           task: {
