--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -22,7 +22,14 @@
       console.log('intercepted.');
 
       var textbox = $('.new-todo');
-      console.log("Task: ", textbox.val());
+      var payload = {
+        task: {
+          title: textbox.val()
+        }
+      }
+      $.post('/tasks', payload).success(function(data) {
+        console.log("Successful HTTP request");
+      });
     });
 
     function taskHtml(task) {
