--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,21 +17,6 @@
 
 <script>
   $(function() {
-    $('#new-form').submit(function(event) {
-      event.preventDefault();
-      console.log('intercepted.');
-
-      var textbox = $('.new-todo');
-      var payload = {
-        task: {
-          title: textbox.val()
-        }
-      }
-      $.post('/tasks', payload).success(function(data) {
-        console.log("Successful HTTP request");
-      });
-    });
-
     function taskHtml(task) {
       var checkedStatus = task.done ? "checked" : "";
         var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
@@ -64,6 +49,24 @@
       ulTodos.html(htmlString);
 
       $(".toggle").change(toggleTask)
+    });
+
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      console.log('intercepted.');
+
+      var textbox = $('.new-todo');
+      var payload = {
+        task: {
+          title: textbox.val()
+        }
+      }
+      $.post('/tasks', payload).success(function(data) {
+        var htmlString = taskHtml(data);
+        var ulTodos = $('.todo-list');
+        ulTodos.append(htmlString)
+        $('.toggle').click(toggleTask);
+      });
     });
   });
 </script>
